[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/boat.png" type="Texture" id=1]
[ext_resource path="res://objects/Player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/bump1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/whoosh1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/strike1.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/splash1.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/player_colour.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.75, 2.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource( 2 )
colour = Color( 0.270588, 0.156863, 0.235294, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Boat" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerIndicator" type="Sprite" parent="Boat"]
modulate = Color( 0.270588, 0.156863, 0.235294, 1 )
texture = ExtResource( 8 )

[node name="Bar" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar"]
position = Vector2( -19.25, 8.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Bar"]
position = Vector2( -16.25, 8 )
scale = Vector2( 0.59375, 0.0625 )
texture = ExtResource( 3 )

[node name="SwishAudio" type="AudioStreamPlayer2D" parent="Bar"]
stream = ExtResource( 5 )
bus = "Deigetic"

[node name="StrikeAudio" type="AudioStreamPlayer2D" parent="Bar"]
stream = ExtResource( 6 )
bus = "Deigetic"

[node name="PuntAudio" type="AudioStreamPlayer2D" parent="Bar"]
stream = ExtResource( 7 )
bus = "Deigetic"

[node name="Tip" type="Node2D" parent="Bar"]
position = Vector2( -41, 8 )

[node name="Tween" type="Tween" parent="."]

[node name="BumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 8.0
bus = "Deigetic"

[connection signal="body_entered" from="Bar" to="." method="_on_swipe_hit"]
[connection signal="tween_completed" from="Tween" to="." method="_tween_completed"]
